--- a/estilo.css
+++ b/estilo.css
@@ -514,12 +514,15 @@ html{
 .portfolio .galeria .proyecto .overlay h3{
     margin-bottom: 20px;
     transition: 1s;
+    color: white;
 }
 .portfolio .galeria .proyecto .overlay:hover{
     opacity: 1;
+    color: white;
 }
 .portfolio .galeria .proyecto .overlay:hover h3{
     margin-bottom: 0px;
+    color: white;
 }
 /* SECCION CONTACTO */
 .contacto{
