--- a/estilo.css
+++ b/estilo.css
@@ -58,7 +58,7 @@ html{
 /* SECCION I N I C I O */
 .inicio{
     background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),
-    url(img/fondo.jpg);
+    url(img/ciencia-de-datos-2.jpg);
     background-size: cover;
     height: 100vh;
     color: #fff;
@@ -215,7 +215,7 @@ html{
     padding: 50px 20px;
 }
 .skills .contenido-seccion{
-    max-width: 1100px;
+    max-width: 700px;
     margin: auto;
 }
 .skills h2{
@@ -269,40 +269,40 @@ html{
     font-size: 14px;
 }
 /* Estas clases se agregaran dinamicamente mediante javascript */
-.skills .skill .javascript{
+.skills .skill .sql{
     width: 0%;
-    animation: 2s javascript forwards;
+    animation: 2s sql forwards;
 }
-@keyframes javascript {
+@keyframes sql {
     0%{width: 0%;}
-    100%{width: 75%;}
+    100%{width: 70%;}
 }
 
-.skills .skill .htmlcss{
+.skills .skill .python{
     width: 0%;
-    animation: 2s htmlcss forwards;
+    animation: 2s python forwards;
 }
-@keyframes htmlcss {
+@keyframes python {
     0%{width: 0%;}
-    100%{width: 89%;}
+    100%{width: 70%;}
 }
 
-.skills .skill .photoshop{
+.skills .skill .powerbi{
     width: 0%;
-    animation: 2s photoshop forwards;
+    animation: 2s powerbi forwards;
 }
-@keyframes photoshop {
+@keyframes powerbi {
     0%{width: 0%;}
-    100%{width: 95%;}
+    100%{width: 40%;}
 }
 
-.skills .skill .wordpress{
+.skills .skill .git{
     width: 0%;
-    animation: 2s wordpress forwards;
+    animation: 2s git forwards;
 }
-@keyframes wordpress {
+@keyframes git {
     0%{width: 0%;}
-    100%{width: 81%;}
+    100%{width: 40%;}
 }
 
 .skills .skill .drupal{
@@ -367,11 +367,6 @@ html{
 .curriculum .contenido-seccion{
     max-width: 1100px;
     margin: auto;
-}
-/* Estilos CSS para las imágenes dentro de la sección de curriculum */
-.contenido-seccion img {
-    max-width: 100%; /* Esto hará que la imagen no supere el ancho de su contenedor */
-    height: auto; /* Esto mantendrá la proporción de la imagen */
 }
 .curriculum h2{
     font-size: 48px;
@@ -519,12 +514,15 @@ html{
 .portfolio .galeria .proyecto .overlay h3{
     margin-bottom: 20px;
     transition: 1s;
+    color: white;
 }
 .portfolio .galeria .proyecto .overlay:hover{
     opacity: 1;
+    color: white;
 }
 .portfolio .galeria .proyecto .overlay:hover h3{
     margin-bottom: 0px;
+    color: white;
 }
 /* SECCION CONTACTO */
 .contacto{
